deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: capa-automation
  labels:
    app: capa-automation
