deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: capa-automation
  namespace: capa-automation
  labels:
    app: capa-automation
spec:
  to:
    kind: Service
    name: capa-automation
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
